@@ -1,3 +1,20 @@
+// Copyright 2021-present StarRocks, Inc. All rights reserved.
+//
+// Licensed under the Apache License, Version 2.0 (the "License");
+// you may not use this file except in compliance with the License.
+// You may obtain a copy of the License at
+//
+//     https://www.apache.org/licenses/LICENSE-2.0
+//
+// Unless required by applicable law or agreed to in writing, software
+// distributed under the License is distributed on an "AS IS" BASIS,
+// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+// See the License for the specific language governing permissions and
+// limitations under the License.
+
+// This file is based on code available under the Apache license here:
+//   https://github.com/apache/incubator-doris/blob/master/fe/fe-core/src/test/java/org/apache/doris/common/util/ListComparatorTest.java
+
 // Licensed to the Apache Software Foundation (ASF) under one
 // or more contributor license agreements.  See the NOTICE file
 // distributed with this work for additional information
@@ -17,19 +34,21 @@
 
 package com.starrocks.common.util;
 
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 import java.util.Collections;
 import java.util.LinkedList;
 import java.util.List;
 
+import static org.junit.jupiter.api.Assertions.assertThrows;
+
 public class ListComparatorTest {
 
     List<List<Comparable>> listCollection;
 
-    @Before
+    @BeforeEach
     public void setUp() {
         listCollection = new LinkedList<List<Comparable>>();
     }
@@ -50,15 +69,15 @@ public class ListComparatorTest {
         // 1, 200, "bcd", 2000
         // 1, 200, "abc"
         List<Comparable> list1 = new LinkedList<Comparable>();
-        list1.add(new Long(1));
-        list1.add(new Long(200));
+        list1.add(Long.valueOf(1));
+        list1.add(Long.valueOf(200));
         list1.add("bcd");
-        list1.add(new Long(1000));
+        list1.add(Long.valueOf(1000));
         listCollection.add(list1);
 
         List<Comparable> list2 = new LinkedList<Comparable>();
-        list2.add(new Long(1));
-        list2.add(new Long(200));
+        list2.add(Long.valueOf(1));
+        list2.add(Long.valueOf(200));
         list2.add("abc");
         listCollection.add(list2);
 
@@ -66,7 +85,7 @@ public class ListComparatorTest {
                 new OrderByPair(2, false));
         Collections.sort(listCollection, comparator);
 
-        Assert.assertEquals(list2, listCollection.get(0));
+        Assertions.assertEquals(list2, listCollection.get(0));
     }
 
     @Test
@@ -74,15 +93,15 @@ public class ListComparatorTest {
         // 1, 200, "abc", 1000
         // 1, 200, "abc"
         List<Comparable> list1 = new LinkedList<Comparable>();
-        list1.add(new Long(1));
-        list1.add(new Long(200));
+        list1.add(Long.valueOf(1));
+        list1.add(Long.valueOf(200));
         list1.add("abc");
-        list1.add(new Long(1000));
+        list1.add(Long.valueOf(1000));
         listCollection.add(list1);
 
         List<Comparable> list2 = new LinkedList<Comparable>();
-        list2.add(new Long(1));
-        list2.add(new Long(200));
+        list2.add(Long.valueOf(1));
+        list2.add(Long.valueOf(200));
         list2.add("abc");
         listCollection.add(list2);
 
@@ -90,31 +109,33 @@ public class ListComparatorTest {
                 new OrderByPair(2, false));
         Collections.sort(listCollection, comparator);
 
-        Assert.assertEquals(list2, listCollection.get(0));
+        Assertions.assertEquals(list2, listCollection.get(0));
     }
 
-    @Test(expected = ClassCastException.class)
+    @Test
     public void test_3() {
-        // 1, 200, "abc", 2000
-        // 1, 200, "abc", "bcd"
-        List<Comparable> list1 = new LinkedList<Comparable>();
-        list1.add(new Long(1));
-        list1.add(new Long(200));
-        list1.add("abc");
-        list1.add(new Long(2000));
-        listCollection.add(list1);
+        assertThrows(ClassCastException.class, () -> {
+            // 1, 200, "abc", 2000
+            // 1, 200, "abc", "bcd"
+            List<Comparable> list1 = new LinkedList<Comparable>();
+            list1.add(Long.valueOf(1));
+            list1.add(Long.valueOf(200));
+            list1.add("abc");
+            list1.add(Long.valueOf(2000));
+            listCollection.add(list1);
 
-        List<Comparable> list2 = new LinkedList<Comparable>();
-        list2.add(new Long(1));
-        list2.add(new Long(200));
-        list2.add("abc");
-        list2.add("bcd");
-        listCollection.add(list2);
+            List<Comparable> list2 = new LinkedList<Comparable>();
+            list2.add(Long.valueOf(1));
+            list2.add(Long.valueOf(200));
+            list2.add("abc");
+            list2.add("bcd");
+            listCollection.add(list2);
 
-        ListComparator<List<Comparable>> comparator = new ListComparator<>(new OrderByPair(1, false),
-                new OrderByPair(3, false));
-        Collections.sort(listCollection, comparator);
-        Assert.fail();
+            ListComparator<List<Comparable>> comparator = new ListComparator<>(new OrderByPair(1, false),
+                    new OrderByPair(3, false));
+            Collections.sort(listCollection, comparator);
+            Assertions.fail();
+        });
     }
 
     @Test
@@ -122,15 +143,15 @@ public class ListComparatorTest {
         // 1, 200, "bb", 2000
         // 1, 300, "aa"
         List<Comparable> list1 = new LinkedList<Comparable>();
-        list1.add(new Long(1));
-        list1.add(new Long(200));
+        list1.add(Long.valueOf(1));
+        list1.add(Long.valueOf(200));
         list1.add("bb");
-        list1.add(new Long(1000));
+        list1.add(Long.valueOf(1000));
         listCollection.add(list1);
 
         List<Comparable> list2 = new LinkedList<Comparable>();
-        list2.add(new Long(1));
-        list2.add(new Long(300));
+        list2.add(Long.valueOf(1));
+        list2.add(Long.valueOf(300));
         list2.add("aa");
         listCollection.add(list2);
 
@@ -138,7 +159,7 @@ public class ListComparatorTest {
                 new OrderByPair(1, false));
         Collections.sort(listCollection, comparator);
 
-        Assert.assertEquals(list2, listCollection.get(0));
+        Assertions.assertEquals(list2, listCollection.get(0));
     }
 
     @Test
@@ -147,21 +168,21 @@ public class ListComparatorTest {
         // 1, 100, "aa"
         // 1, 300, "aa"
         List<Comparable> list1 = new LinkedList<Comparable>();
-        list1.add(new Long(1));
-        list1.add(new Long(200));
+        list1.add(Long.valueOf(1));
+        list1.add(Long.valueOf(200));
         list1.add("bb");
-        list1.add(new Long(1000));
+        list1.add(Long.valueOf(1000));
         listCollection.add(list1);
 
         List<Comparable> list2 = new LinkedList<Comparable>();
-        list2.add(new Long(1));
-        list2.add(new Long(100));
+        list2.add(Long.valueOf(1));
+        list2.add(Long.valueOf(100));
         list2.add("aa");
         listCollection.add(list2);
 
         List<Comparable> list3 = new LinkedList<Comparable>();
-        list3.add(new Long(1));
-        list3.add(new Long(300));
+        list3.add(Long.valueOf(1));
+        list3.add(Long.valueOf(300));
         list3.add("aa");
         listCollection.add(list3);
 
@@ -169,7 +190,7 @@ public class ListComparatorTest {
                 new OrderByPair(1, true));
         Collections.sort(listCollection, comparator);
 
-        Assert.assertEquals(list3, listCollection.get(0));
+        Assertions.assertEquals(list3, listCollection.get(0));
     }
 
 }
